--- a/views/layout/layout.templ
+++ b/views/layout/layout.templ
@@ -2,7 +2,7 @@ package layout
 
 templ Base(title string) {
 	<!DOCTYPE html>
-	<html lang="en" data-theme="dark">
+	<html lang="en" data-theme="business">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -14,13 +14,15 @@ templ Base(title string) {
 			<link rel="shortcut icon" href="/img/templ.png" type="image/png"/>
 			<script src="https://cdn.tailwindcss.com"></script>
 			<link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.10/dist/full.min.css" rel="stylesheet" type="text/css"/>
-			<link rel="stylesheet" href="/css/styles.css"/>
+			// <link rel="stylesheet" href="/css/styles.css"/>
 			<title>{ title }</title>
 			<script src="https://unpkg.com/htmx.org@1.9.9" integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX" crossorigin="anonymous"></script>
 		</head>
 		<body class="sample-transition" hx-boost="true">
 			<main class="">
-				{ children... }
+				@Sidebar(title) {
+					{ children... }
+				}
 			</main>
 		</body>
 	</html>
